.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:33:03 **** Incremental Build of configuration Debug for project TrabajoPractico2 ****
make all 
Building file: ../src/ArrayEmployees.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/ArrayEmployees.d" -MT"src/ArrayEmployees.o" -o "src/ArrayEmployees.o" "../src/ArrayEmployees.c"
Finished building: ../src/ArrayEmployees.c
 
Building target: TrabajoPractico2
Invoking: GCC C Linker
gcc  -o "TrabajoPractico2"  ./src/ArrayEmployees.o ./src/Reports.o ./src/main.o ./src/utn.o   
Finished building target: TrabajoPractico2
 
17:33:06 **** Incremental Build of configuration Debug for project TrabajoPractico2 ****
make all 
make: No se hace nada para 'all'.
17:56:58 **** Incremental Build of configuration Debug for project TrabajoPractico2 ****
make all 
Building file: ../src/ArrayEmployees.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/ArrayEmployees.d" -MT"src/ArrayEmployees.o" -o "src/ArrayEmployees.o" "../src/ArrayEmployees.c"
Finished building: ../src/ArrayEmployees.c
 
Building file: ../src/Reports.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Reports.d" -MT"src/Reports.o" -o "src/Reports.o" "../src/Reports.c"
../src/Reports.c: In function ‘report’:
../src/Reports.c:34:4: error: too few arguments to function ‘sortEmployeesByLastName’
    sortEmployeesByLastName(pEmployee, length);
    ^~~~~~~~~~~~~~~~~~~~~~~
../src/Reports.c:14:12: note: declared here
 static int sortEmployeesByLastName(Employee* pEmployee, int length, int* order);
            ^~~~~~~~~~~~~~~~~~~~~~~
../src/Reports.c:35:4: error: too few arguments to function ‘sortEmployeesBySector’
    sortEmployeesBySector(pEmployee, length);
    ^~~~~~~~~~~~~~~~~~~~~
../src/Reports.c:15:12: note: declared here
 static int sortEmployeesBySector(Employee* pEmployee, int length, int* order);
            ^~~~~~~~~~~~~~~~~~~~~
../src/Reports.c: In function ‘sortEmployeesByLastName’:
../src/Reports.c:65:12: error: switch quantity not an integer
     switch(order)
            ^~~~~
../src/Reports.c: In function ‘sortEmployeesBySector’:
../src/Reports.c:119:12: error: switch quantity not an integer
     switch(order)
            ^~~~~
make: *** [src/subdir.mk:29: src/Reports.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
17:57:15 **** Incremental Build of configuration Debug for project TrabajoPractico2 ****
make all 
Building file: ../src/Reports.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Reports.d" -MT"src/Reports.o" -o "src/Reports.o" "../src/Reports.c"
../src/Reports.c: In function ‘report’:
../src/Reports.c:34:47: warning: passing argument 3 of ‘sortEmployeesByLastName’ makes pointer from integer without a cast [-Wint-conversion]
    sortEmployeesByLastName(pEmployee, length, order);
                                               ^~~~~
../src/Reports.c:14:74: note: expected ‘int *’ but argument is of type ‘int’
 static int sortEmployeesByLastName(Employee* pEmployee, int length, int* order);
                                                                     ~~~~~^~~~~
../src/Reports.c:35:45: warning: passing argument 3 of ‘sortEmployeesBySector’ makes pointer from integer without a cast [-Wint-conversion]
    sortEmployeesBySector(pEmployee, length, order);
                                             ^~~~~
../src/Reports.c:15:72: note: expected ‘int *’ but argument is of type ‘int’
 static int sortEmployeesBySector(Employee* pEmployee, int length, int* order);
                                                                   ~~~~~^~~~~
../src/Reports.c: In function ‘sortEmployeesByLastName’:
../src/Reports.c:65:12: error: switch quantity not an integer
     switch(order)
            ^~~~~
../src/Reports.c: In function ‘sortEmployeesBySector’:
../src/Reports.c:119:12: error: switch quantity not an integer
     switch(order)
            ^~~~~
make: *** [src/subdir.mk:29: src/Reports.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
17:57:23 **** Incremental Build of configuration Debug for project TrabajoPractico2 ****
make all 
Building file: ../src/Reports.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Reports.d" -MT"src/Reports.o" -o "src/Reports.o" "../src/Reports.c"
../src/Reports.c: In function ‘sortEmployeesByLastName’:
../src/Reports.c:65:12: error: switch quantity not an integer
     switch(order)
            ^~~~~
../src/Reports.c: In function ‘sortEmployeesBySector’:
../src/Reports.c:119:12: error: switch quantity not an integer
     switch(order)
            ^~~~~
make: *** [src/subdir.mk:29: src/Reports.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
17:57:38 **** Incremental Build of configuration Debug for project TrabajoPractico2 ****
make all 
Building file: ../src/Reports.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Reports.d" -MT"src/Reports.o" -o "src/Reports.o" "../src/Reports.c"
Finished building: ../src/Reports.c
 
Building target: TrabajoPractico2
Invoking: GCC C Linker
gcc  -o "TrabajoPractico2"  ./src/ArrayEmployees.o ./src/Reports.o ./src/main.o ./src/utn.o   
Finished building target: TrabajoPractico2
 
17:57:39 **** Incremental Build of configuration Debug for project TrabajoPractico2 ****
make all 
make: No se hace nada para 'all'.
18:00:56 **** Incremental Build of configuration Debug for project TrabajoPractico2 ****
make all 
Building file: ../src/Reports.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Reports.d" -MT"src/Reports.o" -o "src/Reports.o" "../src/Reports.c"
Finished building: ../src/Reports.c
 
Building target: TrabajoPractico2
Invoking: GCC C Linker
gcc  -o "TrabajoPractico2"  ./src/ArrayEmployees.o ./src/Reports.o ./src/main.o ./src/utn.o   
Finished building target: TrabajoPractico2
 
18:00:57 **** Incremental Build of configuration Debug for project TrabajoPractico2 ****
make all 
make: No se hace nada para 'all'.
18:01:04 **** Incremental Build of configuration Debug for project TrabajoPractico2 ****
make all 
make: No se hace nada para 'all'.
18:03:12 **** Incremental Build of configuration Debug for project TrabajoPractico2 ****
make all 
Building file: ../src/Reports.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Reports.d" -MT"src/Reports.o" -o "src/Reports.o" "../src/Reports.c"
Finished building: ../src/Reports.c
 
Building target: TrabajoPractico2
Invoking: GCC C Linker
gcc  -o "TrabajoPractico2"  ./src/ArrayEmployees.o ./src/Reports.o ./src/main.o ./src/utn.o   
Finished building target: TrabajoPractico2
 
18:03:13 **** Incremental Build of configuration Debug for project TrabajoPractico2 ****
make all 
make: No se hace nada para 'all'.
